--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3359,7 +3359,7 @@ input, select, textarea {
 
 /* Main */
 
-	/*add  */
+	/*add2  */
 	#content1 {
 		/* background-color: rgb(218, 118, 118); */
 		height: 2400px;
@@ -3392,7 +3392,7 @@ input, select, textarea {
 
 	#content3 {
 		/* background-color: rgb(218, 118, 118); */
-		height: 8700px;
+		height: 7300px;
 	}
 	#site {
 		max-width: 900px;
